--- a/plugins/customizer/files/customizer.css
+++ b/plugins/customizer/files/customizer.css
@@ -1,5 +1,5 @@
 
-h1.be-style-customizer-title {
+h1.be-utilities-customizer-title {
     position: absolute;
     top: 32px;
     left: 202px;
@@ -13,12 +13,12 @@ h1.be-style-customizer-title {
     white-space: nowrap;
 }
 
-h1.be-style-customizer-title.be-style-customizer-small {
+h1.be-utilities-customizer-title.be-utilities-customizer-small {
     font-size: 13px;
 }
 
-#rex-page-module.be-style-customizer-textarea-big #rex-wrapper textarea,
-#rex-page-template.be-style-customizer-textarea-big #rex-wrapper textarea {
+#rex-page-module.be-utilities-customizer-textarea-big #rex-wrapper textarea,
+#rex-page-template.be-utilities-customizer-textarea-big #rex-wrapper textarea {
   margin-left: 5px;
   width: 98%;
   margin-bottom: 20px;
